--- a/index.html
+++ b/index.html
@@ -414,19 +414,19 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 <div class="reveal">
 <div class="slides">
 
-<div id="orgaef72ff" class="figure">
+<div id="org7c00bcb" class="figure">
 <p><img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/NHS.png" alt="NHS.png" width="15%" align="right" />
 </p>
 </div>
 
 
-<div id="org4b9bda7" class="figure">
+<div id="orga8b5d9b" class="figure">
 <p><img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/MSEVasc.png" alt="MSEVasc.png" width="12%" align="left" />
 </p>
 </div>
 <section>
-<section id="slide-orgda755e2" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="orgda755e2">Introduction to Vascular Surgery for Medical Students</h2>
+<section id="slide-org6d06115" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="org6d06115">Introduction to Vascular Surgery for Medical Students</h2>
 <p>
 <center>
 Manfred Junemann Ramirez<sup><a id="fnr.vasc" class="footref" href="#fn.vasc" role="doc-backlink">1</a></sup><br />
@@ -435,8 +435,8 @@ February 2025
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org4761154" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org4761154">Vascular Surgery Learning Objectives</h3>
+<section id="slide-org3d6c925" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org3d6c925">Vascular Surgery Learning Objectives</h3>
 <p>
 Vascular surgery is a specialized field focusing on diseases of the vascular system, which includes arteries, veins, and lymphatic circulation.
 </p>
@@ -451,8 +451,8 @@ Vascular surgery is a specialized field focusing on diseases of the vascular sys
 </section>
 </section>
 <section>
-<section id="slide-org9e507cf" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="org9e507cf">The Arterial System</h2>
+<section id="slide-org663239a" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="org663239a">The Arterial System</h2>
 <p width="38%">
 <center>
 <img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Arterial_tree_body.jpg" alt="Arterial_tree_body.jpg" width="38%" />
@@ -469,8 +469,8 @@ Vascular surgery is a specialized field focusing on diseases of the vascular sys
 </ul>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org8a4a1a8" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org8a4a1a8">Pathophysiology</h3>
+<section id="slide-orge6d827a" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="orge6d827a">Pathophysiology</h3>
 <ul>
 <li class="fragment fade-left">Not enough blood = Occlusive Arterial Disease</li>
 <li class="fragment fade-left">Too much blood = Aneurysmal Arterial Disease and Trauma</li>
@@ -478,8 +478,8 @@ Vascular surgery is a specialized field focusing on diseases of the vascular sys
 </ul>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-orgae257f4" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="orgae257f4">Diagnostic Evaluation</h3>
+<section id="slide-org2935c77" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org2935c77">Diagnostic Evaluation</h3>
 <ul>
 <li class="fragment fade-left">Clinical History &amp; Examination</li>
 <li class="fragment fade-left">Imaging Techniques</li>
@@ -487,8 +487,23 @@ Vascular surgery is a specialized field focusing on diseases of the vascular sys
 </ul>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-orgf89e3c3" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="orgf89e3c3">Surgical Intervention</h3>
+<section id="slide-org44e6b3e" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org44e6b3e">History and Clinical Examination</h4>
+<p width="70%">
+<center>
+<img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/History%20Taking%20Chatbot.jpg" alt="History%20Taking%20Chatbot.jpg" width="70%" />
+</p>
+<div class="slide-footer">Broomfield MSE Vascular Unit</div>
+</section>
+<section id="slide-org34a3b16" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org34a3b16">The Handheld Doppler</h4>
+<p>
+<center><video controls width="1200" height=auto src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/HD%20Doppler%20Waveforms_1.mp4"></video>
+</p>
+<div class="slide-footer">Broomfield MSE Vascular Unit</div>
+</section>
+<section id="slide-org1f31e08" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org1f31e08">Surgical Intervention</h3>
 <ul>
 <li class="fragment fade-left">Open Surgical Approaches</li>
 <li class="fragment fade-left">Endovascular techniques</li>
@@ -498,44 +513,44 @@ Vascular surgery is a specialized field focusing on diseases of the vascular sys
 </section>
 </section>
 <section>
-<section id="slide-orge7ba28a" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="orge7ba28a">The Carotid Arteries</h2>
+<section id="slide-orga404503" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="orga404503">The Carotid Arteries</h2>
 <p width="40%">
 <center>
 <img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Carotid_Gen.jpeg" alt="Carotid_Gen.jpeg" width="40%" />
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org3855bae" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org3855bae">Surgical Anatomy I</h3>
+<section id="slide-orga932532" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="orga932532">Surgical Anatomy I</h3>
 
-<div id="org7f6f938" class="figure">
+<div id="org5503cc1" class="figure">
 <p><img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Carotid_artery_CN.png" alt="Carotid_artery_CN.png" width="45%" align="left" />
 </p>
 <p><span class="figure-number">Figure 1: </span>Carotid artery with overlying cranial nerves. Mandibular branch N VII, Hypoglossus N XII, Vagus N X and Ansa Cervicalis (branches of cervical spinal nerves C1-C3).</p>
 </div>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org0cb4dc8" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org0cb4dc8">Surgical Anatomy II</h3>
+<section id="slide-org096acc8" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org096acc8">Surgical Anatomy II</h3>
 
-<div id="org7b066cd" class="figure">
+<div id="org54bdb5c" class="figure">
 <p><img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Carotid_artery_CN2.png" alt="Carotid_artery_CN2.png" width="45%" align="left" />
 </p>
 <p><span class="figure-number">Figure 2: </span>Carotid artery with overlying cranial nerves. Hypoglossus NXII and Ansa Cervicalis.</p>
 </div>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org5992e90" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org5992e90">Carotid Artery Occlusion</h3>
+<section id="slide-orgb592103" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="orgb592103">Carotid Artery Occlusion</h3>
 <p width="80%">
 <center>
 <img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/NEJM%20VITT%20Carotid.jpg" alt="NEJM%20VITT%20Carotid.jpg" width="80%" />
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org214f04e" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h4 id="org214f04e">The Patient</h4>
+<section id="slide-orga9efe36" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="orga9efe36">The Patient</h4>
 <ul>
 <li class="fragment fade-left">42 yrs Male</li>
 <li class="fragment fade-left">April 2021 AstraZeneca–Oxford COVID19 Vaccination</li>
@@ -546,16 +561,16 @@ dysphasia. Acute ischaemia LEFT lower limb.</li>
 </ul>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-orgee42c80" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h4 id="orgee42c80">The secondary problem</h4>
+<section id="slide-org49e1c24" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org49e1c24">The secondary problem</h4>
 <p width="80%">
 <center>
 <img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/VITT_limb_occl.jpg" alt="VITT_limb_occl.jpg" width="80%" />
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-orgbdd424c" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h4 id="orgbdd424c">The major problem</h4>
+<section id="slide-org1eb0f1c" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org1eb0f1c">The major problem</h4>
 <p>
 <center><video controls width="1200" height=auto
 src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Carotid%20Occlusion.mp4"></video>
@@ -564,44 +579,44 @@ src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/I
 </section>
 </section>
 <section>
-<section id="slide-org684daf8" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="org684daf8">Peripheral Vascular Disease</h2>
+<section id="slide-org70f0e10" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="org70f0e10">Peripheral Vascular Disease</h2>
 <p width="40%">
 <center>
 <img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Dry_Gangraen1.jpg" alt="Dry_Gangraen1.jpg" width="40%" />
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org59b16ab" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org59b16ab">Diagnostic Evaluation</h3>
+<section id="slide-orgbef34fe" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="orgbef34fe">Diagnostic Evaluation</h3>
 </section>
 </section>
 <section>
-<section id="slide-org6ed773f" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="org6ed773f">Aortic Disease</h2>
-<div class="outline-text-2" id="text-org6ed773f">
+<section id="slide-org07369b6" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="org07369b6">Aortic Disease</h2>
+<div class="outline-text-2" id="text-org07369b6">
 </div>
 </section>
-<section id="slide-org941de2a" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org941de2a">Imaging of the Aorta I</h3>
+<section id="slide-org4bca352" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org4bca352">Imaging of the Aorta I</h3>
 <p>
 <center><video controls width="1200" height=auto src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/AorticClip1.mp4"></video>
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org15f8143" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org15f8143">Iamging of the Aorta II</h3>
+<section id="slide-org78dc867" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org78dc867">Imaging of the Aorta II</h3>
 </section>
 </section>
 <section>
-<section id="slide-org334e911" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/anaesthesia.jpg" data-background-opacity="0.2" data-background-transition="fade">
-<h2 id="org334e911">Anaesthesia</h2>
+<section id="slide-orgb4842d5" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/anaesthesia.jpg" data-background-opacity="0.2" data-background-transition="fade">
+<h2 id="orgb4842d5">Anaesthesia</h2>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org55d7c4f" data-background="Images_ARU_Vascular1/anaesthesia.jpg" data-background-opacity="0.2" data-background-transition="fade">
-<h3 id="org55d7c4f">General Considerations</h3>
+<section id="slide-orga64edf0" data-background="Images_ARU_Vascular1/anaesthesia.jpg" data-background-opacity="0.2" data-background-transition="fade">
+<h3 id="orga64edf0">General Considerations</h3>
 
-<div id="org40c0dcc" class="figure">
+<div id="orgdf2248e" class="figure">
 <p><img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/AAA_rupture_risk_AlHashimi2013.jpg" alt="AAA_rupture_risk_AlHashimi2013.jpg" width="60%" />
 </p>
 <p><span class="figure-number">Figure 3: </span>Estimated annual risk of rupture without intervention. Al-Hashimi et al. (2013). Anaesthesia for elective open AAA repair. Anaesthesia CC &amp; P, 13(6), 208–212.</p>
@@ -633,14 +648,14 @@ care of the patient</li>
 </section>
 </section>
 <section>
-<section id="slide-orgc1438ee" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Venkatesh.jpg" data-background-opacity="0.2" data-background-transition="fade">
-<h2 id="orgc1438ee">Summary</h2>
+<section id="slide-org4d3098c" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Venkatesh.jpg" data-background-opacity="0.2" data-background-transition="fade">
+<h2 id="org4d3098c">Summary</h2>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
 </section>
 <section>
-<section id="slide-org65ff70d" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="org65ff70d">Questions</h2>
+<section id="slide-org677f621" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="org677f621">Questions</h2>
 </section>
 </section>
 </div>
