--- a/index.html
+++ b/index.html
@@ -414,19 +414,19 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 <div class="reveal">
 <div class="slides">
 
-<div id="org7c00bcb" class="figure">
+<div id="orgbb26749" class="figure">
 <p><img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/NHS.png" alt="NHS.png" width="15%" align="right" />
 </p>
 </div>
 
 
-<div id="orga8b5d9b" class="figure">
+<div id="orga6d7581" class="figure">
 <p><img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/MSEVasc.png" alt="MSEVasc.png" width="12%" align="left" />
 </p>
 </div>
 <section>
-<section id="slide-org6d06115" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="org6d06115">Introduction to Vascular Surgery for Medical Students</h2>
+<section id="slide-org172ed9c" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="org172ed9c">Introduction to Vascular Surgery for Medical Students</h2>
 <p>
 <center>
 Manfred Junemann Ramirez<sup><a id="fnr.vasc" class="footref" href="#fn.vasc" role="doc-backlink">1</a></sup><br />
@@ -435,8 +435,8 @@ February 2025
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org3d6c925" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org3d6c925">Vascular Surgery Learning Objectives</h3>
+<section id="slide-org5fd5a1e" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org5fd5a1e">Vascular Surgery Learning Objectives</h3>
 <p>
 Vascular surgery is a specialized field focusing on diseases of the vascular system, which includes arteries, veins, and lymphatic circulation.
 </p>
@@ -451,8 +451,8 @@ Vascular surgery is a specialized field focusing on diseases of the vascular sys
 </section>
 </section>
 <section>
-<section id="slide-org663239a" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="org663239a">The Arterial System</h2>
+<section id="slide-orge490a8c" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="orge490a8c">The Arterial System</h2>
 <p width="38%">
 <center>
 <img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Arterial_tree_body.jpg" alt="Arterial_tree_body.jpg" width="38%" />
@@ -469,8 +469,8 @@ Vascular surgery is a specialized field focusing on diseases of the vascular sys
 </ul>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-orge6d827a" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="orge6d827a">Pathophysiology</h3>
+<section id="slide-orgcb6e293" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="orgcb6e293">Pathophysiology</h3>
 <ul>
 <li class="fragment fade-left">Not enough blood = Occlusive Arterial Disease</li>
 <li class="fragment fade-left">Too much blood = Aneurysmal Arterial Disease and Trauma</li>
@@ -478,8 +478,33 @@ Vascular surgery is a specialized field focusing on diseases of the vascular sys
 </ul>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org2935c77" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org2935c77">Diagnostic Evaluation</h3>
+<section id="slide-org49587dd" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org49587dd">Arterial Vascular Cells</h4>
+
+<div id="org8b1bc3b" class="figure">
+<p><img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Vasc%20Biol%20Atheroma.jpg" alt="Vasc%20Biol%20Atheroma.jpg" width="35%" align="left" />
+</p>
+</div>
+
+<ul>
+<li>Endothelial Cells</li>
+<li>Smooth Muscle Cells</li>
+<li>Pericytes</li>
+<li>Fibroblasts</li>
+<li>Adult Stem (Progenitor) Cells</li>
+<li>Haematopoetic System derived Cells</li>
+
+</ul>
+<div class="slide-footer">Broomfield MSE Vascular Unit</div>
+</section>
+<section id="slide-org84d5ee9" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org84d5ee9">Atherosclerosis</h4>
+</section>
+<section id="slide-org9fb27fa" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org9fb27fa">Intimal Hyperplasia</h4>
+</section>
+<section id="slide-org66679e9" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org66679e9">Diagnostic Evaluation</h3>
 <ul>
 <li class="fragment fade-left">Clinical History &amp; Examination</li>
 <li class="fragment fade-left">Imaging Techniques</li>
@@ -487,23 +512,23 @@ Vascular surgery is a specialized field focusing on diseases of the vascular sys
 </ul>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org44e6b3e" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h4 id="org44e6b3e">History and Clinical Examination</h4>
+<section id="slide-org42df745" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org42df745">History and Clinical Examination</h4>
 <p width="70%">
 <center>
 <img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/History%20Taking%20Chatbot.jpg" alt="History%20Taking%20Chatbot.jpg" width="70%" />
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org34a3b16" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h4 id="org34a3b16">The Handheld Doppler</h4>
+<section id="slide-org6e186bf" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org6e186bf">The Handheld Doppler</h4>
 <p>
 <center><video controls width="1200" height=auto src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/HD%20Doppler%20Waveforms_1.mp4"></video>
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org1f31e08" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org1f31e08">Surgical Intervention</h3>
+<section id="slide-org05a2cb9" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org05a2cb9">Surgical Intervention</h3>
 <ul>
 <li class="fragment fade-left">Open Surgical Approaches</li>
 <li class="fragment fade-left">Endovascular techniques</li>
@@ -513,44 +538,44 @@ Vascular surgery is a specialized field focusing on diseases of the vascular sys
 </section>
 </section>
 <section>
-<section id="slide-orga404503" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="orga404503">The Carotid Arteries</h2>
+<section id="slide-org1eea349" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="org1eea349">The Carotid Arteries</h2>
 <p width="40%">
 <center>
 <img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Carotid_Gen.jpeg" alt="Carotid_Gen.jpeg" width="40%" />
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-orga932532" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="orga932532">Surgical Anatomy I</h3>
+<section id="slide-org2021836" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org2021836">Surgical Anatomy I</h3>
 
-<div id="org5503cc1" class="figure">
+<div id="org5fd663c" class="figure">
 <p><img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Carotid_artery_CN.png" alt="Carotid_artery_CN.png" width="45%" align="left" />
 </p>
 <p><span class="figure-number">Figure 1: </span>Carotid artery with overlying cranial nerves. Mandibular branch N VII, Hypoglossus N XII, Vagus N X and Ansa Cervicalis (branches of cervical spinal nerves C1-C3).</p>
 </div>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org096acc8" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org096acc8">Surgical Anatomy II</h3>
+<section id="slide-org3cba991" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org3cba991">Surgical Anatomy II</h3>
 
-<div id="org54bdb5c" class="figure">
+<div id="org200c8b5" class="figure">
 <p><img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Carotid_artery_CN2.png" alt="Carotid_artery_CN2.png" width="45%" align="left" />
 </p>
 <p><span class="figure-number">Figure 2: </span>Carotid artery with overlying cranial nerves. Hypoglossus NXII and Ansa Cervicalis.</p>
 </div>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-orgb592103" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="orgb592103">Carotid Artery Occlusion</h3>
+<section id="slide-org36bfcc7" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org36bfcc7">Carotid Artery Occlusion</h3>
 <p width="80%">
 <center>
 <img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/NEJM%20VITT%20Carotid.jpg" alt="NEJM%20VITT%20Carotid.jpg" width="80%" />
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-orga9efe36" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h4 id="orga9efe36">The Patient</h4>
+<section id="slide-org7b15f0f" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org7b15f0f">The Patient</h4>
 <ul>
 <li class="fragment fade-left">42 yrs Male</li>
 <li class="fragment fade-left">April 2021 AstraZeneca–Oxford COVID19 Vaccination</li>
@@ -561,16 +586,16 @@ dysphasia. Acute ischaemia LEFT lower limb.</li>
 </ul>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org49e1c24" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h4 id="org49e1c24">The secondary problem</h4>
+<section id="slide-org6a1f2e4" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org6a1f2e4">The secondary problem</h4>
 <p width="80%">
 <center>
 <img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/VITT_limb_occl.jpg" alt="VITT_limb_occl.jpg" width="80%" />
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org1eb0f1c" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h4 id="org1eb0f1c">The major problem</h4>
+<section id="slide-org548f20f" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h4 id="org548f20f">The major problem</h4>
 <p>
 <center><video controls width="1200" height=auto
 src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Carotid%20Occlusion.mp4"></video>
@@ -579,44 +604,44 @@ src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/I
 </section>
 </section>
 <section>
-<section id="slide-org70f0e10" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="org70f0e10">Peripheral Vascular Disease</h2>
+<section id="slide-org4dcdc5e" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="org4dcdc5e">Peripheral Vascular Disease</h2>
 <p width="40%">
 <center>
 <img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Dry_Gangraen1.jpg" alt="Dry_Gangraen1.jpg" width="40%" />
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-orgbef34fe" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="orgbef34fe">Diagnostic Evaluation</h3>
+<section id="slide-org55f1730" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org55f1730">Diagnostic Evaluation</h3>
 </section>
 </section>
 <section>
-<section id="slide-org07369b6" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="org07369b6">Aortic Disease</h2>
-<div class="outline-text-2" id="text-org07369b6">
+<section id="slide-org4e2be38" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="org4e2be38">Aortic Disease</h2>
+<div class="outline-text-2" id="text-org4e2be38">
 </div>
 </section>
-<section id="slide-org4bca352" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org4bca352">Imaging of the Aorta I</h3>
+<section id="slide-org16c3dbb" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org16c3dbb">Imaging of the Aorta I</h3>
 <p>
 <center><video controls width="1200" height=auto src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/AorticClip1.mp4"></video>
 </p>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-org78dc867" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h3 id="org78dc867">Imaging of the Aorta II</h3>
+<section id="slide-org542b0ff" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h3 id="org542b0ff">Imaging of the Aorta II</h3>
 </section>
 </section>
 <section>
-<section id="slide-orgb4842d5" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/anaesthesia.jpg" data-background-opacity="0.2" data-background-transition="fade">
-<h2 id="orgb4842d5">Anaesthesia</h2>
+<section id="slide-org1d5b8ac" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/anaesthesia.jpg" data-background-opacity="0.2" data-background-transition="fade">
+<h2 id="org1d5b8ac">Anaesthesia</h2>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
-<section id="slide-orga64edf0" data-background="Images_ARU_Vascular1/anaesthesia.jpg" data-background-opacity="0.2" data-background-transition="fade">
-<h3 id="orga64edf0">General Considerations</h3>
+<section id="slide-org1993bd9" data-background="Images_ARU_Vascular1/anaesthesia.jpg" data-background-opacity="0.2" data-background-transition="fade">
+<h3 id="org1993bd9">General Considerations</h3>
 
-<div id="orgdf2248e" class="figure">
+<div id="orgff87fea" class="figure">
 <p><img src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/AAA_rupture_risk_AlHashimi2013.jpg" alt="AAA_rupture_risk_AlHashimi2013.jpg" width="60%" />
 </p>
 <p><span class="figure-number">Figure 3: </span>Estimated annual risk of rupture without intervention. Al-Hashimi et al. (2013). Anaesthesia for elective open AAA repair. Anaesthesia CC &amp; P, 13(6), 208–212.</p>
@@ -648,14 +673,14 @@ care of the patient</li>
 </section>
 </section>
 <section>
-<section id="slide-org4d3098c" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Venkatesh.jpg" data-background-opacity="0.2" data-background-transition="fade">
-<h2 id="org4d3098c">Summary</h2>
+<section id="slide-orgf35bc1d" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Venkatesh.jpg" data-background-opacity="0.2" data-background-transition="fade">
+<h2 id="orgf35bc1d">Summary</h2>
 <div class="slide-footer">Broomfield MSE Vascular Unit</div>
 </section>
 </section>
 <section>
-<section id="slide-org677f621" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
-<h2 id="org677f621">Questions</h2>
+<section id="slide-org33013d6" data-background="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Hoppman.jpeg" data-background-opacity="0.2">
+<h2 id="org33013d6">Questions</h2>
 </section>
 </section>
 </div>
